--- a/Menghitung_Mimpi/app/src/main/res/values/strings.xml
+++ b/Menghitung_Mimpi/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Menghitung_Mimpi</string>
+
+    <string name="text1">Selamat Datang di FinWise</string>
+    <string name="text2">¿Are you ready to take control of your finaces?</string>
 </resources>
