--- a/Menghitung_Mimpi/app/src/main/res/values/strings.xml
+++ b/Menghitung_Mimpi/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="text1">Selamat Datang di FinWise</string>
     <string name="text2">¿Are you ready to take control of your finaces?</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
