--- a/Menghitung_Mimpi/app/src/main/res/values/strings.xml
+++ b/Menghitung_Mimpi/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Menghitung_Mimpi</string>
+    <string name="app_name">FinWise</string>
 
     <string name="text1">Selamat Datang di FinWise</string>
     <string name="text2">¿Are you ready to take control of your finaces?</string>
